--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>冰冻三尺 非一日之寒<br>
     积土成山 非斯须之作</p></blockquote>
 
-    <p>Hey，我是<strong>金梦(BY)</strong>，一名研究生。</p>
+    <p>Hey，我是<strong>金梦(JM)</strong>，一名研究生。</p>
 
     <p>喜欢吃看剧各种奇思妙想</p>
 
